# naggregator

./: .env  .env.template  README.md  activities.py  config.py  justfile  news_data.py  newsfeed_workflow.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_web.py  run_worker.py  run_workflow.py  temporal_client.py
activities/: fetch_news.py  watchlist.py
ui/: client.py  clients.py  index.py  main.py.old  pyproject.toml  tailwind.config.js
ui/static/: app.css  index.css
ui/templates/: base.html  base2.html  index copy.html  index.html  index2.html
