[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["cici thomson <cici.thomson@temporal.io>"]
readme = "README.md"
packages = [
    { include = "**/*.py", from = "."  }
]

[tool.poetry.dependencies]
python = "^3.12"
temporalio = "^1.6.0"
poetry = "^1.8.3"
flask = {extras = ["async"], version = "^2.2.3"}
python-dotenv = "^1.0.1"
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
